--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,13 +17,13 @@
             },
             "group": "build",
             "presentation": {
-                "echo": true,
-                "reveal": "always",
+                "echo": false,
+                "reveal": "silent",
                 "revealProblems": "onProblem",
                 "focus": false,
-                "panel": "new",
+                "panel": "shared",
                 "showReuseMessage": true,
-                "clear": false
+                "clear": true
             },
             "runOptions": {
                 "runOn": "default"
